# easyVision

./: .gitignore  GSL.hs  GSLHaskell.cabal  INSTALL  Makefile  README  README.md  TODO.txt  cameras.def  demo.hs  findFiles.sh  index.html  index.txt  setup  tests.hs
GSL/: Base.hs  Core.hs  Derived.hs  Differentiation.hs  Drawing.hs  Fourier.hs  Instances.hs  Integration.hs  Interface.hs  Minimization.hs  Polynomials.hs  Util.hs  Utils.hs  Wrappers.hs  gslaux.c  gslaux.h  prologue
apps/: Autofrontal.hs  Classifier.hs  EasyVision.hs  ImagProc.hs  Ipp.hs  Stat.hs  Vision.hs  clasif.hs  classdemo.hs  correspondences.txt  frontal.hs  frontal2.hs  frontal3.hs  homography.hs  kernelmse.hs  makedoc  stereo.hs  tests.hs
apps/EasyVision/: Camera.hs  Draw.hs  GUI.hs
apps/ImagProc/: Camera.hs  ImageProcessing.hs  Images.hs  Saddle.hs
apps/Ipp/: Camera.hs  Core.hs  Draw.hs  HEasyVision.hs  ImageProcessing.hs  Images.hs  Parameters.hs  Saddle.hs  Trackball.hs  Typical.hs  Wrappers.hs  auxIpp.c  auxIpp.h  mplayer-fifo.c  mycvCamera.c  mycvCamera.h
apps/Vision/: Autofrontal.hs  Classifier.hs  Geometry.hs  Stat.hs
apps/compvis/: Makefile  automatch.hs  detect.hs  hmplayer.hs  pose.hs  ransac.hs  stereo.hs
apps/easyvision/: Makefile  Saddle.hs  Trackball.hs  automatch.hs  detect.hs  frontal.hs  (+8 more)
cabal/: Makefile  clean.sh  haddock.sh  reinstall.sh  unregister.sh
cabal/camera/: LICENSE  camera.cabal
cabal/camera/lib/ImagProc/: Camera.hs  Util.hs
cabal/camera/lib/ImagProc/C/: UVC.hs
cabal/camera/lib/ImagProc/C/UVC/: avilib.c  capture.c  color.c  color.h  utils.c  utils.h  uvcvideo.h  v4l2uvc.c  v4l2uvc.h
cabal/contrib/: configure.hs  contrib.cabal
cabal/contrib/lib/ImagProc/C/: Corners.hs  NP.hs  Segments.hs
cabal/contrib/lib/ImagProc/C/Corners/: corners.c
cabal/contrib/lib/ImagProc/C/NP/: .gitignore  Makefile
cabal/contrib/lib/ImagProc/C/Segments/: Makefile  Structs.hsc  mycvSegments.h  mycvUtils.h
cabal/contrib/lib/ImagProc/GPU/SIFT/: SiftGPU.cpp
cabal/ev/: easyVision.cabal
cabal/ev/lib/: EasyVision.hs
cabal/ev/lib/EasyVision/: MiniApps.hs
cabal/ev/lib/EasyVision/GUI/: Draw.hs  GUI.hs  Trackball.hs
cabal/ev/lib/EasyVision/MiniApps/: Browser.hs  Combinators.hs  Concurrent.hs  Contours.hs  CornerTracker.hs  Corners.hs  Misc.hs  OCR.hs  Objects.hs  PoseTracker.hs  RegionMarker.hs  Save.hs  ScatterPlot.hs  Static.hs  Zoom.hs
cabal/features/: features.cabal
cabal/features/lib/Features/: Descriptors.hs  InterestPoints.hs  Matching.hs  Polyline.hs  ScaleSpace.hs  Segments.hs
cabal/gpu/: Setup.lhs  configure.hs  dso_handle.c  imagproc-gpu.cabal
cabal/gpu/lib/ImagProc/GPU/: SIFT.hs
cabal/gui/: ev-gui.cabal
cabal/gui/lib/EasyVision/: GUI.hs
cabal/gui/lib/EasyVision/GUI/: Draw.hs  GUI.hs  Interface.hs  Model3DS.hs  Objects.hs  Parameters.hs  Trackball.hs  Util.hs
cabal/imagproc/: Setup.lhs  configure.hs  imagproc.cabal
cabal/imagproc/lib/: ImagProc.hs
cabal/imagproc/lib/ImagProc/: Base.hs  Generic.hs  ImageFold.hs  Images.hs  Moments.hs  Tools.hs  Util.hs
cabal/imagproc/lib/ImagProc/C/: Simple.hs
cabal/imagproc/lib/ImagProc/Ipp/: AdHoc.hs  Adapt.hs  Auto.hs  AutoGen.hs  Convert.hs  Core.hs  Pure.hs  Structs.hsc  Wrappers.hs  adapter.hs  functions.txt  ptr_adapt.c  ptr_adapt.h
cabal/opencv/: opencv.cabal
cabal/opencv/lib/: OpenCV.hs  opencv.c  opencv2.cpp
cabal/opencv/lib/OpenCV/: MSER.hs
cabal/opencv/lib/OpenCV/C/: opencv.c  opencv2.cpp
cabal/patrec/: patrec.cabal
cabal/patrec/examples/: adaboostdemo.hs  bayesgauss.hs  classdemo.hs  cs.hs  demotest.hs  em.hs  ferns.hs  gptest.hs  graph.hs  ica.hs  pls.hs  probability.hs  ukf.hs
cabal/patrec/lib/: Classifier.hs
cabal/patrec/lib/Classifier/: Adaboost.hs  Base.hs  Kernel.hs  Neural.hs  Prepro.hs  Regression.hs  SVM.hs  Simple.hs  ToyProblems.hs  Tree.hs
cabal/patrec/lib/Util/: Covariance.hs  Kalman.hs  Misc.hs  Optimize.hs  Probability.hs  Stat.hs
cabal/vision/: vision.cabal
cabal/vision/lib/: Vision.hs
cabal/vision/lib/Util/: Ellipses.hs  Sparse.hs
cabal/vision/lib/Vision/: Autofrontal.hs  Bootstrap.hs  Bundle.hs  Camera.hs  Epipolar.hs  Estimation.hs  Gea.hs  Geometry.hs  LASBA.hs  Multiview.hs  Multiview.lhs  SparseRep.hs  Stereo.hs  TensorRep.hs  Tensorial.hs  Types.hs
compvis/: Makefile  Makefile.include  NewParam.hs  README  augmented.hs  automatch.hs  autopano.hs  autostereo.hs  background.hs  brush.hs  cards.hs  catalog.hs  checkall.sh  classifier.hs  classifier2.hs  color.hs  contours.hs  corners.hs  demo.hs  demostereo.hs  detect.hs  dethessian.hs  dynamic.hs  fft.hs  frontal.hs  hessian.hs  hmplayer.hs  hotpoints.hs  interpolate.hs  justsave.hs  matches.hs  ocr.hs  olddemo.hs  onlyRects.hs  pose.hs  pseudocolor.hs  ransac.hs  recognize.hs  record.hs  rectangles.hs  (+14 more)
example/: correspondences.txt  frontal.hs  frontal2.hs  mdfdemo.hs
examples/: Makefile  adaboostdemo.hs  clasif.hs  classdemo.hs  corrs.txt  demo.hs  ferns.hs  ga.hs  garbage.hs  grid.hs  hessharr.hs  homography.hs  integrate.hs  kalman.hs  mdfdemo.hs  minimize.hs  mnistdemo.hs  multiview.hs  opencv1.hs  opencv2.hs  opencv4.hs  pca.hs  pca1.hs  pca2.hs  pinv1.hs  pinv2.hs  plot.hs  quat.hs  save.hs  stereo.hs  stereo2.hs  testmnist.m  tests.hs  trifocal.hs  ukf.hs  vectorable.lhs
lib/: Classifier.hs  EasyVision.hs  Features.hs  GeometricAlgebra.hs  ImagProc.hs  Kalman.hs  Quaternion.hs  Tensor.hs  Vision.hs  makedoc  prologue.txt
projects/: Makefile  Makefile.include  checkall.sh
src/: GSL.hs  GSLHaskell.cabal  cabal-fixlapack  fixlapack  install  setup
src/G/: Common.hs  LinearAlgebra.hs  Matrix.hs  Types.hs  Wrappers.hs
src/GSL/: Common.hs  Core.hs  Derived.hs  Differentiation.hs  Fourier.hs  GSL.hs  Instances.hs  Integration.hs  Internal.hs  Lapack.hs  LinearAlgebra.hs  Matrix.hs  Minimization.hs  Plot.hs  Polynomials.hs  Special.hs  Types.hs  Utils.hs  Vector.hs  Wrappers.hs  gslaux.c  gslaux.h  lapack-aux.c  lapack-aux.h  prologue
src/GSL/LinearAlgebra/: Algorithms.hs  Matrix.hs  Storable.hs  Unboxed.hs  Vector.hs
src/old/: Drawing.hs  DrawingGL.hs  Interface.hs  install
(+729 files in other folders)
