Name:               GSL
Version:            0.6
License:            GPL
Author:             Alberto Ruiz
Maintainer:         aruiz@um.es
Stability:          provisional
Homepage:           http://dis.um.es/~alberto/GSLHaskell
Package-url:
Synopsis:           Functional interface to the GNU Scientific Library
Description:
Category:           Numerical
tested-with:        GHC ==6.6
Build-Depends:      base, haskell98
Extensions:         ForeignFunctionInterface,
                    MultiParamTypeClasses,
                    FunctionalDependencies
--ghc-options:        -Wall
ghc-options:        -O
Exposed-modules:    GSL,
                         GSL.Matrix, GSL.LinearAlgebra,
                         GSL.Wrappers,  GSL.Types, GSL.Common
                         GSL.Fourier,
                         GSL.Polynomials,
                         GSL.Differentiation,
                         GSL.Integration,
                         GSL.Minimization,
                         GSL.Special
Other-modules:
C-sources:          GSL/gslaux.c
extra-libraries:    gsl gslcblas
cc-options:         -Wall -O2
ghc-prof-options:   -auto-all