Name:               camera
Version:            0.1.0
License:            GPL
License-file:       LICENSE
Author:             Alberto Ruiz
Maintainer:         Alberto Ruiz <aruiz@um.es>
Stability:          experimental
Homepage:           http://www.easyvision.googlepages.com/
Synopsis:           interface to uvc cameras and mplayer pipe
Description:
  interface to uvc cameras and mplayer pipe

Category:           Math
tested-with:        GHC ==6.10.4, GHC ==6.12.1

cabal-version:      >=1.2
build-type:         Simple

extra-source-files:     lib/ImagProc/C/UVC/avilib.h
                        lib/ImagProc/C/UVC/color.h
                        lib/ImagProc/C/UVC/huffman.h
                        lib/ImagProc/C/UVC/utils.h
                        lib/ImagProc/C/UVC/v4l2uvc.h
                        lib/ImagProc/C/UVC/dynctrl-logitech.c
                        lib/ImagProc/C/UVC/uvc_compat.h
                        lib/ImagProc/C/UVC/uvcvideo.h


extra-tmp-files:

library
    Build-Depends:      base >= 3 && < 5, imagproc >= 0.1,
                        directory, process

    hs-source-dirs:     lib

    Exposed-modules:    ImagProc.C.UVC
                        ImagProc.Camera
                        ImagProc.Util

    other-modules:

    c-sources:          lib/ImagProc/C/UVC/avilib.c
                        lib/ImagProc/C/UVC/color.c
                        lib/ImagProc/C/UVC/utils.c
                        lib/ImagProc/C/UVC/v4l2uvc.c
                        lib/ImagProc/C/UVC/capture.c


    include-dirs:       lib/ImagProc/C/UVC/

    cc-options:         -O4

    ghc-prof-options:   -auto-all

    ghc-options:        -Wall

