Name:               imagproc-contrib
Version:            0.1.0
License:            GPL
License-file:       LICENSE
Author:             Alberto Ruiz
Maintainer:         Alberto Ruiz <aruiz@um.es>
Stability:          experimental
Homepage:           http://www.easyvision.googlepages.com/
Synopsis:           additional image processing functions
Description:
  additional image processing functions

Category:           Math
tested-with:        GHC ==6.10.4, GHC ==6.12.1

cabal-version:      >=1.2
build-type:         Simple

extra-source-files:     lib/ImagProc/GPU/SIFT/SiftGPU.h

                        lib/ImagProc/C/Segments/mycv.h
                        lib/ImagProc/C/Segments/mycvRunnings.h
                        lib/ImagProc/C/Segments/mycvSegments.h
                        lib/ImagProc/C/Segments/mycvTablesEdgels.h
                        lib/ImagProc/C/Segments/mycvUtils.h
                        lib/ImagProc/C/Segments/mycvUtilsSegs.h
                        lib/ImagProc/C/Segments/segments.h
                     
extra-tmp-files:    

library
    Build-Depends:      base >= 3 && < 5,
                        hmatrix >= 0.8.3, imagproc >= 0.1,
                        GLUT

    hs-source-dirs:     lib

    Exposed-modules:    ImagProc.GPU.SIFT
                        ImagProc.C.Segments
                        ImagProc.C.Segments.Structs

    other-modules:

    c-sources:          lib/ImagProc/GPU/SIFT/SiftGPU.cpp
    
                        lib/ImagProc/C/Segments/mycvRunnings.c
                        lib/ImagProc/C/Segments/mycvSegments.c
                        lib/ImagProc/C/Segments/mycvTablesEdgels.c
                        lib/ImagProc/C/Segments/mycvUtils.c
                        lib/ImagProc/C/Segments/mycvUtilsSegs.c

    cc-options:         -O4

    ghc-prof-options:   -auto-all

    ghc-options:        -Wall
    
    extra-libraries:    siftgpu cudart Cg CgGL GLEW IL glut
    extra-lib-dirs:     /home/brutus/apps/CUDA
    include-dirs:       lib/ImagProc/C/Segments
    
