Name:               easyVision
Version:            0.1.0
License:            GPL
License-file:       LICENSE
Author:             Alberto Ruiz
Maintainer:         Alberto Ruiz <aruiz@um.es>
Stability:          experimental
Homepage:           http://www.easyvision.googlepages.com/
Synopsis:           image processing and computer vision mini apps
Description:
 image processing and computer vision mini apps

Category:           Math
tested-with:        GHC ==6.10.4, GHC ==6.12.1

cabal-version:      >=1.2
build-type:         Simple

extra-source-files:

library
    Build-Depends:      base >= 3 && < 5,
                        features >= 0.1, imagproc >= 0.1,
                        camera >= 0.1,
                        vision >= 0.1, hmatrix >= 0.8.3,
                        prcv-util, patrec, ev-gui >= 0.1,
                        GLUT, containers, process, old-time, colour,
                        parallel <2

    hs-source-dirs:     lib

    Exposed-modules:    EasyVision
                        EasyVision.MiniApps
                        EasyVision.MiniApps.Combinators
                        EasyVision.MiniApps.Misc
                        EasyVision.MiniApps.Concurrent
                        EasyVision.MiniApps.Corners
                        EasyVision.MiniApps.CornerTracker
                        EasyVision.MiniApps.SignalMonitor
                        EasyVision.MiniApps.PoseTracker
                        EasyVision.MiniApps.Contours
                        EasyVision.MiniApps.ScatterPlot
                        EasyVision.MiniApps.Static
                        EasyVision.MiniApps.Save
                        EasyVision.MiniApps.RegionMarker
    other-modules:

    ghc-prof-options:   -auto-all

    ghc-options:        -Wall

