Name:               features
Version:            0.1.0
License:            GPL
License-file:       LICENSE
Author:             Alberto Ruiz
Maintainer:         Alberto Ruiz <aruiz@um.es>
Stability:          experimental
Homepage:           http://www.easyvision.googlepages.com/
Synopsis:           medium level image features
Description:
 medium level image features

Category:           Math
tested-with:        GHC ==6.10.4, GHC ==6.12.1

cabal-version:      >=1.2
build-type:         Simple

extra-source-files:

library
    Build-Depends:      base >= 3 && < 5, containers, array,
                        hmatrix >= 0.8.3, vision >= 0.1,
                        imagproc >= 0.1

    hs-source-dirs:     lib
    
    Exposed-modules:    Features
                        Features.Polyline
                        Features.Descriptors
                        Features.InterestPoints
                        Features.Matching
                        Features.ScaleSpace
                        Features.Segments                 
                        
    other-modules:      

    ghc-prof-options:   -auto-all

    ghc-options:        -Wall

