Name:               opencv
Version:            0.1.0
License:            LGPL
License-file:       LICENSE
Author:             Alberto Ruiz
Maintainer:         Alberto Ruiz <aruiz@um.es>
Stability:          experimental
Homepage:           http://code.haskell.org/easyVision
Synopsis:           simple interface to opencv

Category:           Math
tested-with:        GHC ==6.10.4, GHC ==6.12.1

cabal-version:      >=1.2
build-type:         Simple

extra-source-files: 


library

    Build-Depends:      base >= 3 && < 5,
                        imagproc

    hs-source-dirs:     lib

    Exposed-modules:   OpenCV

    other-modules:

    c-sources:          lib/opencv.c, lib/opencv2.cpp

    ghc-prof-options:   -auto-all

    ghc-options:        -Wall
                        -fno-warn-missing-signatures

    extra-libraries: ml cvaux highgui cv cxcore
    
    include-dirs: /usr/local/include/opencv
    --include-dirs: /usr/include/opencv

    extra-lib-dirs: /usr/local/lib

