Name:               patrec
Version:            0.1.0
License:            GPL
License-file:       LICENSE
Author:             Alberto Ruiz
Maintainer:         Alberto Ruiz <aruiz@um.es>
Stability:          experimental
Homepage:           http://www.easyvision.googlepages.com/
Synopsis:           Simple pattern recognition algorithms
Description:
 Simple pattern recognition algorithms and 
 feature extraction combinators.

Category:           Math
tested-with:        GHC ==6.10.4, GHC ==6.12.1

cabal-version:      >=1.2
build-type:         Simple

extra-source-files:

library
    Build-Depends:      base >= 3 && < 5, hmatrix >= 0.8.3, array,
                        random, containers, haskell98

    hs-source-dirs:     lib
    
    Exposed-modules:    Classifier
                        Classifier.Base
                        Classifier.Simple
                        Classifier.Neural
                        Classifier.Kernel
                        Classifier.SVM
                        Classifier.Adaboost
                        Classifier.ToyProblems
                        Util.Stat
                        Util.Kalman
                        
    other-modules:      

    ghc-prof-options:   -auto-all

    ghc-options:        -Wall

